--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -43,10 +43,11 @@
         <form action="" class="page-header__form--sign-up">
           <input type="text" placeholder="First Name" required>
           <input type="text" placeholder="Last Name" required>
-          <input type="email" placeholder="E-Mail" required>
           <input type="tel" placeholder="Phone" required>
+          <input type="email" placeholder="E-Mail" required>
+          <input type="password" placeholder="Password" required>
           <select required>
-            <option value="Default">-Select Country-</option>
+            <option value="Default">Select Country</option>
             <optgroup label="A">
               <option value="AX">AALAND ISLANDS</option>
             	<option value="AF">AFGHANISTAN</option>
@@ -303,7 +304,7 @@
           </select>
           <div class="page-header__checkbox">
             <input type="checkbox" id="check">
-            <label for="check">I confirm I am over 18 years old<br>and that I have read, understood<br>and accept <a href="#">The Terms and<br>Conditions apply</a>.</label>
+            <label for="check">I confirm I am over 18 years old and that<br>I have read,understood and accept<br><a href="templates/terms.html">The Terms and Conditions apply</a></label>
           </div>
           <input type="submit" value="Register Now">
           <p>Trading involves significant risk of loss</p>
@@ -320,10 +321,10 @@
     <div class="container">
       <div class="trade__flex">
         <div class="trade__left-column">
-          Walk on the path to success.<br>Buy, sell and trade cryptocurrencies.
+          Walk on the path to success.<br>Buy, sell and trade cryptocurrencies
         </div>
         <div class="trade__right-column">
-          With cryptologic, you can easily change<br>any blockchain leading asset for any other<br>and it is 100% secured and fast.
+          With Plus500Crypto, you can easily change<br>any blockchain leading asset for any other<br>and it is 100% secured and fast
         </div>
       </div>
     </div>
@@ -354,17 +355,17 @@
       <div class="news__flex">
         <div class="news__left-column">
           <b>WHY CRYPTOLOGIC</b>
-          <p>Cryptologic offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use...</p>
+          <p>Plus500Crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use...</p>
           <!-- <a href="#">Read More</a> -->
         </div>
         <div class="news__middle-column">
           <b>A NEW TYPE OF INVECTMENT</b>
-          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. Cryptologic web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots</p>
+          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of Plus500Crypto. Plus500Crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots</p>
           <!-- <a href="#">Read More</a> -->
         </div>
         <div class="news__right-column">
           <b>FRIENDLY INTERFACE</b>
-          <p>Cryptologic offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your...</p>
+          <p>Plus500Crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your...</p>
           <!-- <a href="#">Read More</a> -->
         </div>
       </div>
