--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -15,18 +15,18 @@ form {
   display: flex;
   flex-direction: column;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
   border: 3px solid $b;
+  background: rgba(255, 255, 255, 0.8);
 }
 
 input {
-  width: 350px;
-  height: 40px;
+  width: 310px;
+  height: 30px;
   margin-bottom: 15px;
   padding: 0 20px;
   color: $w;
-  font-size: 18px;
+  font-size: 16px;
   border-radius: 10px;
   border: none;
   background: rgba(0, 0, 0, 0.9);
@@ -34,9 +34,22 @@ input {
 }
 
 input[type="checkbox"] {
-  width: 20px;
+  width: 18px;
   margin: 0;
   cursor: pointer;
+}
+
+select {
+  height: 32px;
+  padding: 0 20px;
+  padding-left: 15px;
+  margin-bottom: 20px;
+  color: $w;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.9);
+  outline: none;
 }
 
 input[type="submit"] {
@@ -58,29 +71,18 @@ input[type="submit"]:hover {
 }
 
 label {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 15px;
   cursor: pointer;
 }
 
 input::placeholder {
   color: $w;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase;
 }
 
-select {
-  height: 40px;
-  padding: 0 20px;
-  margin-bottom: 20px;
-  color: $w;
-  font-size: 16px;
-  border-radius: 10px;
-  background: rgba(0, 0, 0, 0.9);
-  outline: none;
-}
-
 form p {
+  font-size: 14px;
   text-align: center;
 }
 
@@ -99,14 +101,19 @@ form p {
   input {
     width: 85%;
     height: 30px;
-    margin-bottom: 15px;
     padding: 0 20px;
     font-size: 16px;
   }
   
   select {
-    height: 35px;
-    padding: 0 10px;
+    width: 99%;
+    height: 32px;
+    padding: 0 15px;
+  }
+  
+  label {
+    padding-left: 10px;
+    font-size: 14px;
   }
 }
 
