--- a/assets/templates/crypto-b/templates/faq.html
+++ b/assets/templates/crypto-b/templates/faq.html
@@ -44,7 +44,7 @@
         <b>How do I cancel an order?</b>
         <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
         <b>Do you allow VPN/Tor connections?</b>
-        <p>Yes we do, however for best performance of the cryptologic web interface and API we recommend using a good and fast connection.</p>
+        <p>Yes we do, however for best performance of the Plus500Crypto web interface and API we recommend using a good and fast connection.</p>
         <b>Can I trade on margin?</b>
         <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
         <b>What is a limit order?</b>
@@ -53,8 +53,8 @@
         <p>The order book is a list of all open (unfilled) buy and sell orders. You can buy or sell digital currency at any price listed.</p>
         <b>Why is my order stuck as an open order?</b>
         <p>Newly placed orders first enter the order book as an "open order". When some of your "open order" matches with another order, it becomes a "partially matched order". When all of your order matches with another user's order, it becomes a "fully matched order" or "completed order". Completed orders are removed from the order book.</p>
-        <b>Is there a fee to transfer funds to and from Cryptologic?</b>
-        <p>Cryptologic does not charge any transfer fees for moving funds between your Coinbase account and Cryptologic account.</p>
+        <b>Is there a fee to transfer funds to and from Plus500Crypto?</b>
+        <p>Plus500Crypto does not charge any transfer fees for moving funds between your Coinbase account and Plus500Crypto account.</p>
         <b>Why is my "available" balance less than my total?</b>
         <p class="page-header--pb">You have open orders. The funds used to place your orders are considered to be on hold and not part of your available balance.</p>
       </div>
