--- a/assets/templates/crypto/template/form.html
+++ b/assets/templates/crypto/template/form.html
@@ -37,7 +37,7 @@
           <div class="form__country">
             <label for="country">Country</label>
             <select id="country" required>
-              <option value="Default">Default</option>
+              <option value="Default">Choose you country</option>
               <optgroup label="A">
                 <option value="AX">AALAND ISLANDS</option>
               	<option value="AF">AFGHANISTAN</option>
