--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -122,26 +122,38 @@ form {
   -ms-flex-direction: column;
   flex-direction: column;
   padding: 20px;
-  background: rgba(255, 255, 255, 0.8);
   border-radius: 10px;
-  border: 3px solid #070055; }
+  border: 3px solid #070055;
+  background: rgba(255, 255, 255, 0.8); }
 
 input {
-  width: 350px;
-  height: 40px;
+  width: 310px;
+  height: 30px;
   margin-bottom: 15px;
   padding: 0 20px;
   color: #fff;
-  font-size: 18px;
+  font-size: 16px;
   border-radius: 10px;
   border: none;
   background: rgba(0, 0, 0, 0.9);
   outline: none; }
 
 input[type="checkbox"] {
-  width: 20px;
+  width: 18px;
   margin: 0;
   cursor: pointer; }
+
+select {
+  height: 32px;
+  padding: 0 20px;
+  padding-left: 15px;
+  margin-bottom: 20px;
+  color: #fff;
+  font-size: 14px;
+  text-transform: uppercase;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.9);
+  outline: none; }
 
 input[type="submit"] {
   margin: 0 auto;
@@ -161,41 +173,31 @@ input[type="submit"]:hover {
   border: 2px solid #070055; }
 
 label {
-  font-size: 18px;
-  font-weight: bold;
+  font-size: 15px;
   cursor: pointer; }
 
 input::-webkit-input-placeholder {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase; }
 
 input:-ms-input-placeholder {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase; }
 
 input::-ms-input-placeholder {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase; }
 
 input::placeholder {
   color: #fff;
-  font-size: 16px;
+  font-size: 14px;
   text-transform: uppercase; }
 
-select {
-  height: 40px;
-  padding: 0 20px;
-  margin-bottom: 20px;
-  color: #fff;
-  font-size: 16px;
-  border-radius: 10px;
-  background: rgba(0, 0, 0, 0.9);
-  outline: none; }
-
 form p {
+  font-size: 14px;
   text-align: center; }
 
 .page-header__form--login {
@@ -211,12 +213,15 @@ form p {
   input {
     width: 85%;
     height: 30px;
-    margin-bottom: 15px;
     padding: 0 20px;
     font-size: 16px; }
   select {
-    height: 35px;
-    padding: 0 10px; } }
+    width: 99%;
+    height: 32px;
+    padding: 0 15px; }
+  label {
+    padding-left: 10px;
+    font-size: 14px; } }
 
 /* Smartphones (горизонтальная) ----------- */
 /* Smartphones (вертикальная) ----------- */
@@ -360,7 +365,7 @@ form p {
   .container {
     width: 95%; }
   .page-header {
-    min-height: 830px; }
+    min-height: 890px; }
   .page-header__logo {
     margin-top: 20px; }
   .page-header__logo-b {
@@ -470,7 +475,6 @@ form p {
   /* стили */ }
 
 .trade {
-  min-height: 170px;
   background: black; }
 
 .trade__flex {
@@ -483,22 +487,20 @@ form p {
 
 .trade__left-column,
 .trade__right-column {
-  color: #fff; }
+  color: #fff;
+  margin-top: 30px;
+  padding-bottom: 30px; }
 
 .trade__left-column {
-  margin-top: 30px;
   font-size: 35px;
   font-weight: 500;
   text-transform: uppercase; }
 
 .trade__right-column {
-  margin-top: 30px;
   font-size: 25px; }
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
-  .trade {
-    min-height: 220px; }
   .trade__flex {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -507,20 +509,17 @@ form p {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
+  .trade__left-column,
+  .trade__right-column {
+    text-align: center; }
   .trade__left-column {
     font-size: 20px; }
   .trade__right-column {
-    padding-bottom: 40px;
-    font-size: 16px; }
-  .trade__left-column,
-  .trade__right-column {
-    text-align: center; } }
+    font-size: 16px; } }
 
 /* Smartphones (горизонтальная) ----------- */
 /* Smartphones (вертикальная) ----------- */
 @media only screen and (max-width: 320px) {
-  .trade {
-    min-height: 340px; }
   .trade__flex {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -529,31 +528,23 @@ form p {
     -webkit-box-direction: normal;
     -ms-flex-direction: column;
     flex-direction: column; }
-  .trade__left-column {
-    font-size: 30px; }
-  .trade__right-column {
-    font-size: 20px;
-    font-weight: normal; }
   .trade__left-column,
   .trade__right-column {
-    text-align: center; } }
+    text-align: center; }
+  .trade__left-column {
+    font-size: 20px; }
+  .trade__right-column {
+    font-size: 16px; } }
 
 /* iPads (вертикальная и горизонтальная) ----------- */
 @media only screen and (min-width: 768px) and (max-width: 1024px) {
-  .trade {
-    min-height: 220px; }
-  .trade .container,
-  .trade__flex {
-    min-height: 220px; }
   .trade__left-column {
     -ms-flex-item-align: center;
     align-self: center;
-    margin-top: 0;
     font-size: 35px; }
   .trade__right-column {
     -ms-flex-item-align: center;
     align-self: center;
-    margin-top: 0;
     font-size: 20px; } }
 
 .edge {
@@ -1040,17 +1031,6 @@ form p {
   .coin__c-8,
   .coin__c-9 {
     display: none; }
-  .coin__c-4,
-  .coin__c-5,
-  .coin__c-6 {
-    -webkit-animation-name: coin;
-    animation-name: coin;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-duration: 3s;
-    animation-duration: 3s; }
   .trading__coin {
     min-height: 180px;
     margin-top: 40px; }
@@ -1104,17 +1084,6 @@ form p {
   .coin__c-8,
   .coin__c-9 {
     display: none; }
-  .coin__c-4,
-  .coin__c-5,
-  .coin__c-6 {
-    -webkit-animation-name: coin;
-    animation-name: coin;
-    -webkit-animation-iteration-count: infinite;
-    animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    animation-timing-function: linear;
-    -webkit-animation-duration: 3s;
-    animation-duration: 3s; }
   .trading__coin {
     min-height: 100px;
     margin-top: 30px; }
