--- a/assets/templates/crypto/template/faq.html
+++ b/assets/templates/crypto/template/faq.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>FAQ - Cryptologi</title>
-  <link rel="stylesheet" href="../css/sty.css">
-  <link rel="stylesheet" href="../css/res.css">
+  <link rel="stylesheet" href="../css/stabc.css">
+  <link rel="stylesheet" href="../css/resabc.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
@@ -37,7 +37,7 @@
         <p class="page-main__title">How do I cancel an order?</p>
         <p>To cancel an open order, first make sure you're viewing the market on which your order was placed (e.g. BTC-USD, LTC-BTC, etc). Your open orders will be listed in the Open Orders panel in the lower middle of the trading dashboard. Hover the order that you desire to cancel and click the "cancel" to the right hand side of the order.</p>
         <p class="page-main__title">Do you allow VPN/Tor connections?</p>
-        <p>Yes we do, however for best performance of the cryptologi web interface and API we recommend using a good and fast connection.</p>
+        <p>Yes we do, however for best performance of the Cryptologi web interface and API we recommend using a good and fast connection.</p>
         <p class="page-main__title">Can I trade on margin?</p>
         <p>Currently Margin trading is disabled. Please subscribe to our blog for more updates.</p>
         <p class="page-main__title">What is a limit order?</p>
