--- a/assets/templates/crypto/template/terms.html
+++ b/assets/templates/crypto/template/terms.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Terms - Cryptologi</title>
-  <link rel="stylesheet" href="../css/sty.css">
-  <link rel="stylesheet" href="../css/res.css">
+  <link rel="stylesheet" href="../css/stabc.css">
+  <link rel="stylesheet" href="../css/resabc.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
@@ -47,9 +47,9 @@
         <p>Cryptologi Wallet</p>
         <ul>
           <li>The Bitcoin network is responsible for confirming Bitcoin transactions and Cryptologi is not liable for any loss due to, but not limited to, errors in the protocol, delays or any other breakdown relating to the Bitcoin network.</li>
-          <li>You acknowledge that cryptologi cannot confirm, cancel or reverse Bitcoin transactions.</li>
-          <li>You expressly agree that cryptologi is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
-          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using cryptologi you accept the risk that transactions may be delayed and you agree not to hold cryptologi liable for any damages or loss due to delays.</li>
+          <li>You acknowledge that Cryptologi cannot confirm, cancel or reverse Bitcoin transactions.</li>
+          <li>You expressly agree that Cryptologi is not liable for any errors, loss or omissions due to sending Bitcoin to or receiving Bitcoin from incorrect wallet addresses, e-mail addresses, entering incorrect transaction amounts, or any other information related to Bitcoin transactions by using the service. Please ensure that you use the correct Bitcoin addresses, e-mail addresses, transaction amounts when transacting.</li>
+          <li>Bitcoin is securely stored in a combination of online and offline storage. As a result it may take up to 48 hours or more to facilitate Bitcoin transactions. By using Cryptologi you accept the risk that transactions may be delayed and you agree not to hold Cryptologi liable for any damages or loss due to delays.</li>
         </ul>
         <p>Cryptologi Exchange</p>
         <ul>
@@ -58,8 +58,8 @@
           <li>You must be resident in one of our supported countries to register and use the service.</li>
           <li>You acknowledge that trading Bitcoin involves large risks and could result in significant financial losses.</li>
           <li>Cryptologi does not accept cash payments. Cash deposits to our bank account may be delayed and will incur additional processing fees.</li>
-          <li>Incoming payments to cryptologi must be done by means of electronic funds transfer (EFT) from your bank account in your country of residence. The bank account must be opened in your own name.</li>
-          <li>Outgoing payments from cryptologi can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
+          <li>Incoming payments to Cryptologi must be done by means of electronic funds transfer (EFT) from your bank account in your country of residence. The bank account must be opened in your own name.</li>
+          <li>Outgoing payments from Cryptologi can only be done by means of electronic funds transfer (EFT) to your confirmed bank account in your country of residence. The bank account must be opened in your own name.</li>
           <li>Cryptologi does not guarantee Bitcoin or bank transfer disbursement times and will not be liable for any delays.</li>
           <li>You must provide security for trading Bitcoin by funding your account in advance of trading.</li>
           <li>Trade orders placed on the site are binding and cannot be cancelled or reversed.</li>
