--- a/assets/templates/crypto/template/trading.html
+++ b/assets/templates/crypto/template/trading.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Trading - Cryptologi</title>
-  <link rel="stylesheet" href="../css/sty.css">
-  <link rel="stylesheet" href="../css/res.css">
+  <link rel="stylesheet" href="../css/stabc.css">
+  <link rel="stylesheet" href="../css/resabc.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
