--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>CryptoLogi</title>
-  <link rel="stylesheet" href="css/sty.css">
-  <link rel="stylesheet" href="css/res.css">
+  <link rel="stylesheet" href="css/stabc.css">
+  <link rel="stylesheet" href="css/resabc.css">
   <!-- <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet"> -->
 </head>
 <body>
@@ -94,12 +94,12 @@
           </div>
           <div class="read__more">
             <b>WHY CRYPTOLOGI<br>IS UNIQUE? </b>
-            <p class="read__more--link2">Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologi is very easy to understand and use. When trading with cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
+            <p class="read__more--link2">Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologi is very easy to understand and use. When trading with Cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
             <a class="open-2" href="#">Read More</a>
           </div>
           <div class="read__more">
             <b>LEARN HOW<br>TO TRADE</b>
-            <p class="read__more--link3">Trading with cryptologi gives you full access to numerous professional Bitcoin traders you can learn from...<span class="hide-3">We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.</span></p>
+            <p class="read__more--link3">Trading with Cryptologi gives you full access to numerous professional Bitcoin traders you can learn from...<span class="hide-3">We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.</span></p>
             <a class="open-3" href="#">Read More</a>
           </div>
         </div>
@@ -138,7 +138,7 @@
     <div class="container">
       <h2 class="trading__title">Trading on the go</h2>
       <div class="trading__flex-container">
-        <p class="trading__text">Cryptologi provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with cryptologi and move on the path to success.</p>
+        <p class="trading__text">Cryptologi provides the possibility to trade Bitcoin or any other digital currency from your pc, tablet or mobile device. This is as a result of our multifaceted design interface. You can follow the market trends and get interesting live updates on the go. On here you can manage your portfolio wherever you are. Trade today with Cryptologi and move on the path to success.</p>
       </div>
       <div class="trading__flex-container  trading__flex-container--m">
         <a class="info__link  info__link--red" href="template/form.html">Create Account</a>
@@ -154,8 +154,8 @@
     <div class="container">
       <div class="container__adv">
         <h2>Fly above<br>the clouds<br>of success</h2>
-        <p class="fly__text">Buy, sell and trade Bitcoin<br>with cryptologi</p>
-        <p class="fly__desc">This platform was intended for professional and success motivated traders of bitcoin. The security of cryptologi is impeccable. Bank relationships are very good and peer-to-peer transfer can be carried out fast and with ease. On here profits are multiplied with Bitcoin margin trading, and you can leverage long or short bitcoin positions.</p>
+        <p class="fly__text">Buy, sell and trade Bitcoin<br>with Cryptologi</p>
+        <p class="fly__desc">This platform was intended for professional and success motivated traders of bitcoin. The security of Cryptologi is impeccable. Bank relationships are very good and peer-to-peer transfer can be carried out fast and with ease. On here profits are multiplied with Bitcoin margin trading, and you can leverage long or short bitcoin positions.</p>
       </div>
     </div>
   </section>
@@ -189,6 +189,7 @@
             <li><a href="template/faq.html">FAQ</a></li>
             <li><a href="template/support.html">Support</a></li>
             <li><a href="template/trading.html">Trading Guide</a></li>
+            <li><a href="template/disclaimer.html">Disclaimer</a></li>
           </ul>
         </div>
         <!-- <div class="page-footer__column">
