--- a/assets/templates/crypto/template/about.html
+++ b/assets/templates/crypto/template/about.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>About Us - Cryptologi</title>
-  <link rel="stylesheet" href="../css/sty.css">
-  <link rel="stylesheet" href="../css/res.css">
+  <link rel="stylesheet" href="../css/stabc.css">
+  <link rel="stylesheet" href="../css/resabc.css">
   <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 </head>
 <body>
@@ -35,7 +35,7 @@
       <div class="container__adv  container__adv--pm">
         <h1>About Us</h1>
         <p>
-          Cryptologi is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website, mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market. Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account system with individual approach to each customer, from Bitcoin learner to institutional professional traders.<br><br>With cryptologi you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin and other crypto currencies. Cryptologi is absolutely the go-to site for traders and investors when you demand a quick trade transaction, stable wallets and advanced security practices. Cryptologi is the right place to be!
+          Cryptologi is a multi-functional digital currency exchange that is highly trust worthy. It offers a cross-platform trading via website, mobile application, web socket and API providing accesss to high liquidity orderbook for top currency pairs on the market. Very fast Bitcoin buying and selling is possible through simplified bundle interface. The exchange has developed a multi-level account system with individual approach to each customer, from Bitcoin learner to institutional professional traders.<br><br>With Cryptologi you get worldwide coverage, mulitiple payement options, and 24/7 support accompanied by time-proven platform stability that guarantees safty of assets and data. We provide all individuals and businesses a  world class experience to trade Bitcoin and other crypto currencies. Cryptologi is absolutely the go-to site for traders and investors when you demand a quick trade transaction, stable wallets and advanced security practices. Cryptologi is the right place to be!
         </p>
       </div>
     </div>
