--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -89,18 +89,18 @@
         <div class="read__flex-container">
           <div class="read__more  read__more--pb">
             <b>NEW TO CRYPTO-<br>CURRENCY?</b>
-            <p class="read__more--link1">Cryptocurrency is a digital currency that makes use of cryptography as a means of security. Due to its security feature, it is practically difficult to make counterfeits of this currency... <span class="hide-1">This currency is not issued by any government authority, therefore it is impossible for any authority to interfere, influence or manipulate the currency. Just as paper money is used as a medium of exchange in the purchase of goods and services, cryptocurrencies such Bitcoin and Ethereum can also be used for this medium. These currencies are decentralized and digital.</span></p>
-            <a class="open-1" href="#">Read More</a>
+            <p>Cryptocurrency is a digital currency that makes use of cryptography as a means of security. Due to its security feature, it is practically difficult to make counterfeits of this currency. This currency is not issued by any government authority, therefore it is impossible for any authority to interfere, influence or manipulate the currency. Just as paper money is used as a medium of exchange in the purchase of goods and services, cryptocurrencies such Bitcoin and Ethereum can also be used for this medium. These currencies are decentralized and digital.</p>
+            <!-- <a class="open-1" href="#">Read More</a> -->
           </div>
           <div class="read__more">
             <b>WHY CRYPTOLOGI<br>IS UNIQUE? </b>
-            <p class="read__more--link2">Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories...<span class="hide-2">Cryptologi is very easy to understand and use. When trading with Cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</span></p>
-            <a class="open-2" href="#">Read More</a>
+            <p>Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories. Cryptologi is very easy to understand and use. When trading with Cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</p>
+            <!-- <a class="open-2" href="#">Read More</a> -->
           </div>
           <div class="read__more">
             <b>LEARN HOW<br>TO TRADE</b>
-            <p class="read__more--link3">Trading with Cryptologi gives you full access to numerous professional Bitcoin traders you can learn from...<span class="hide-3">We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.</span></p>
-            <a class="open-3" href="#">Read More</a>
+            <p>Trading with Cryptologi gives you full access to numerous professional Bitcoin traders you can learn from. We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.</p>
+            <!-- <a class="open-3" href="#">Read More</a> -->
           </div>
         </div>
       </div>
