--- a/assets/templates/crypto-b/sass/global/form.scss
+++ b/assets/templates/crypto-b/sass/global/form.scss
@@ -1,7 +1,7 @@
 .page-header__form {
   display: flex;
-  justify-content: flex-end;
-  margin-top: 40px;
+  justify-content: center;
+  // margin-top: 40px;
 }
 
 .page-header__checkbox {
@@ -14,22 +14,22 @@
 form {
   display: flex;
   flex-direction: column;
-  padding: 20px;
+  padding: 40px;
   border-radius: 10px;
-  border: 3px solid $b;
-  background: rgba(255, 255, 255, 0.8);
+  border: 5px solid $w;
+  // background: rgba(255, 255, 255, 0.8);
 }
 
 input {
-  width: 310px;
-  height: 30px;
+  width: 300px;
+  height: 40px;
   margin-bottom: 15px;
   padding: 0 20px;
   color: $w;
-  font-size: 16px;
+  font-size: 18px;
   border-radius: 10px;
-  border: none;
-  background: rgba(0, 0, 0, 0.9);
+  border: 2px solid $w;
+  background: transparent;
   outline: none;
 }
 
@@ -40,26 +40,27 @@ input[type="checkbox"] {
 }
 
 select {
-  height: 32px;
+  height: 42px;
   padding: 0 20px;
   padding-left: 15px;
   margin-bottom: 20px;
   color: $w;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: uppercase;
   border-radius: 10px;
-  background: rgba(0, 0, 0, 0.9);
+  border: 2px solid $w;
+  background: rgba(0, 174, 239, 0.7);
   outline: none;
 }
 
 input[type="submit"] {
   margin: 0 auto;
   margin-bottom: 10px;
-  color: $b;
+  color: $w;
   font-size: 18px;
   text-transform: uppercase;
-  background: rgba(255, 255, 255, 0.6);
-  border: 2px solid $b;
+  background: transparent;
+  border: 2px solid $w;
   cursor: pointer;
   transition: 0.3s;
 }
@@ -71,13 +72,13 @@ input[type="submit"]:hover {
 }
 
 label {
-  font-size: 15px;
+  font-size: 18px;
   cursor: pointer;
 }
 
 input::placeholder {
   color: $w;
-  font-size: 14px;
+  font-size: 16px;
   text-transform: uppercase;
 }
 
