--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -39,7 +39,7 @@
       </nav>
     </div>
     <div class="container">
-      <!-- Content -->
+      
     </div>
   </header>
   <section class="trade">
@@ -166,5 +166,6 @@
       </div>
     </div>
   </footer>
+  <script src="js/script.js"></script>
 </body>
 </html>
