--- a/assets/templates/crypto-b/sass/blocks/rules.scss
+++ b/assets/templates/crypto-b/sass/blocks/rules.scss
@@ -13,6 +13,10 @@
   }
 }
 
+.page-header__title {
+  text-align: center;
+}
+
 .page-header--blue {
   background: url('../img/bg-rules.png') no-repeat center;
   background-size: cover;
