--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -22,8 +22,8 @@
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="#" class="page-header__login">Login</a></li>
-                <li class="page-header__item"><a href="#" class="page-header__sign-up">Sign Up</a></li>
+                <li class="page-header__item"><a href="templates/login.html">Login</a></li>
+                <li class="page-header__item"><a href="templates/registration.html">Sign Up</a></li>
                 <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -39,7 +39,7 @@
       </nav>
     </div>
     <div class="container">
-      
+      <!-- Content -->
     </div>
   </header>
   <section class="trade">
@@ -81,17 +81,14 @@
         <div class="news__left-column">
           <b>WHY CRYPTOLOGIC</b>
           <p>Plus500Crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use...</p>
-          <!-- <a href="#">Read More</a> -->
         </div>
         <div class="news__middle-column">
           <b>A NEW TYPE OF INVECTMENT</b>
           <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of Plus500Crypto. Plus500Crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots</p>
-          <!-- <a href="#">Read More</a> -->
         </div>
         <div class="news__right-column">
           <b>FRIENDLY INTERFACE</b>
           <p>Plus500Crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your...</p>
-          <!-- <a href="#">Read More</a> -->
         </div>
       </div>
     </div>
@@ -156,16 +153,9 @@
             <li><a href="templates/trading.html">Trading Guide</a></li>
           </ul>
         </div>
-        <!-- <div class="page-footer__column">
-          <b>Language</b><br>
-          <select class="page-footer__select">
-            <option>English (US)</option>
-            <option>Русский</option>
-          </select>
-        </div> -->
       </div>
     </div>
   </footer>
-  <script src="js/script.js"></script>
+  <!-- <script src="js/script.js"></script> -->
 </body>
 </html>
