--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -199,8 +199,18 @@ form p {
   font-size: 14px;
   text-align: center; }
 
-.page-header__form--login {
-  display: none; }
+.page-header__login input[type="checkbox"] {
+  margin-bottom: 30px; }
+
+.page-header__login label {
+  margin-top: 5px;
+  margin-left: 15px;
+  font-size: 22px; }
+
+.page-header__login .page-header__checkbox {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
@@ -1221,12 +1231,20 @@ form p {
     font-size: 18px;
     font-weight: 100; }
 
-.page-header__title {
-  text-align: center; }
-
 .page-header--blue {
   background: url("../img/bg-rules.png") no-repeat center;
   background-size: cover; }
+
+.page-header--height {
+  min-height: 1000px; }
+
+.page-header__title {
+  text-align: center; }
+
+.page-header__flex--center {
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
 
 .page-footer--up {
   margin-top: -18px; }
