--- a/assets/templates/crypto-b/templates/registration.html
+++ b/assets/templates/crypto-b/templates/registration.html
@@ -13,7 +13,7 @@
     <div class="page-header__head">
       <nav class="page-header__nav">
         <div class="container">
-          <div class="page-header__flex">
+          <div class="page-header__flex  page-header__flex--center">
             <div class="page-header__logo">
               <a href="../index.html">
                 <img class="page-header__logo-b" src="../img/logo.png" alt="CryptoLogic">
@@ -28,7 +28,7 @@
       <div class="page-header__rules">
         <h1 class="page-header__title">Registration</h1>
         <div class="page-header__form  page-header--pb">
-          <form action="" class="page-header__form--sign-up">
+          <form action="">
             <input type="text" placeholder="First Name" required>
             <input type="text" placeholder="Last Name" required>
             <input type="tel" placeholder="Phone" required>
@@ -297,11 +297,6 @@
             <input type="submit" value="Register Now">
             <p>Trading involves significant risk of loss</p>
           </form>
-          <!-- <form action="" class="page-header__form--login">
-            <input type="email" placeholder="E-Mail" required>
-            <input type="password" placeholder="Password" required>
-            <input type="submit" value="Sign In">
-          </form> -->
         </div>
       </div>
     </div>
