--- a/assets/templates/crypto-b/templates/login.html
+++ b/assets/templates/crypto-b/templates/login.html
@@ -36,6 +36,7 @@
               <label for="check">Remember me</label>
             </div>
             <input type="submit" value="Sign In">
+            <p>New user? <a href="registration.html">Sign Up</a></p>
           </form>
         </div>
       </div>
