--- a/assets/templates/crypto-b/templates/registration.html
+++ b/assets/templates/crypto-b/templates/registration.html
@@ -296,6 +296,7 @@
             </div>
             <input type="submit" value="Register Now">
             <p>Trading involves significant risk of loss</p>
+            <p>Already have an account? <a href="login.html">Sign In</a></p>
           </form>
         </div>
       </div>
