--- a/assets/templates/crypto-b/css/style.css
+++ b/assets/templates/crypto-b/css/style.css
@@ -196,11 +196,14 @@ input::placeholder {
   text-transform: uppercase; }
 
 form p {
-  font-size: 14px;
+  margin-bottom: 0;
   text-align: center; }
 
+form a {
+  text-decoration: none; }
+
 .page-header__login input[type="checkbox"] {
-  margin-bottom: 30px; }
+  margin-bottom: 10px; }
 
 .page-header__login label {
   margin-top: 5px;
@@ -211,6 +214,9 @@ form p {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center; }
+
+.page-header__login p {
+  margin-bottom: 0; }
 
 /* Smartphones (вертикальная и горизонтальная ориентация) ----------- */
 @media only screen and (min-width: 320px) and (max-width: 480px) {
