--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -29,8 +29,8 @@
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="#">Login</a></li>
-                <li class="page-header__item"><a href="#">Sign Up</a></li>
+                <li class="page-header__item"><a href="templates/login.html">Login</a></li>
+                <li class="page-header__item"><a href="templates/registration.html">Sign Up</a></li>
                 <li class="page-header__item"><a href="templates/contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -98,7 +98,7 @@
       <div class="crypto__flex">
         <h1>A cryptobank for everyone</h1>
         <p>In 8 years’ time, the crypto-economy will exceed 1и trillion dollars. Cryptobanks will become a cornerstone in the relations between decentralized economy and future daily</p>
-        <a href="#">Create Account</a>
+        <a href="templates/registration.html">Create Account</a>
       </div>
     </div>
   </section>
@@ -132,8 +132,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="templates/login.html">Sign In</a></li>
+            <li><a href="templates/registration.html">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
