--- a/assets/templates/crypto-b/templates/about.html
+++ b/assets/templates/crypto-b/templates/about.html
@@ -53,7 +53,7 @@
           <b>Account</b>
           <ul>
             <li><a href="login.html">Sign In</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="registration.html">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
