--- a/assets/templates/crypto-b/templates/terms.html
+++ b/assets/templates/crypto-b/templates/terms.html
@@ -22,15 +22,15 @@
             </div>
             <div class="page-header__main-nav">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="../index.html">Login</a></li>
-                <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
+                <li class="page-header__item"><a href="login.html">Login</a></li>
+                <li class="page-header__item"><a href="registration.html">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
             <div class="page-header__main-nav  page-header__main-nav--s">
               <ul class="page-header__nav-list">
-                <li class="page-header__item"><a href="../index.html">Login</a></li>
-                <li class="page-header__item"><a href="../index.html">Sign Up</a></li>
+                <li class="page-header__item"><a href="login.html">Login</a></li>
+                <li class="page-header__item"><a href="registration.html">Sign Up</a></li>
                 <li class="page-header__item"><a href="contact.html">Contacts</a></li>
               </ul>
             </div>
@@ -112,8 +112,8 @@
         <div class="page-footer__column">
           <b>Account</b>
           <ul>
-            <li><a href="#">Log In</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="login.html">Sign In</a></li>
+            <li><a href="registration.html">Sign Up</a></li>
           </ul>
         </div>
         <div class="page-footer__column">
