--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -23,7 +23,7 @@
             <ul class="main-nav__list">
               <li class="main-nav__item"><a href="template/login.html">LOGIN</a></li>
               <li class="main-nav__item"><a href="template/contact.html">CONTACT</a></li>
-              <li class="main-nav__item"><a href="template/form.html">LOG UP</a></li>
+              <li class="main-nav__item"><a href="template/form.html">SIGN UP</a></li>
             </ul>
           </nav>
         </div>
