--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -189,7 +189,7 @@
             <li><a href="template/faq.html">FAQ</a></li>
             <li><a href="template/support.html">Support</a></li>
             <li><a href="template/trading.html">Trading Guide</a></li>
-            <li><a href="template/disclaimer.html">Disclaimer</a></li>
+            <!-- <li><a href="template/disclaimer.html">Disclaimer</a></li> -->
           </ul>
         </div>
         <!-- <div class="page-footer__column">
