--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -49,7 +49,7 @@
           Walk on the path to success.<br>Buy, sell and trade cryptocurrencies
         </div>
         <div class="trade__right-column">
-          With Plus500Crypto, you can easily change<br>any blockchain leading asset for any other<br>and it is 100% secured and fast
+          With Plus500Crypto,<br>you can easily change any blockchain<br>leading asset for any other and it is<br>100% secured and fast
         </div>
       </div>
     </div>
