--- a/assets/templates/crypto/index.html
+++ b/assets/templates/crypto/index.html
@@ -94,12 +94,12 @@
           </div>
           <div class="read__more">
             <b>WHY CRYPTOLOGI<br>IS UNIQUE? </b>
-            <p>Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories. Cryptologi is very easy to understand and use. When trading with Cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. you can start trading from the very first day.</p>
+            <p>Сryptologi is a super world class trading platform that offers a very unique interface with real time updates about different digital currencies, charting tools, various trade histories. Cryptologi is very easy to understand and use. When trading with Cryptologi, you are sure to maximize profits. On here peer-to-peer funding is carried out easily and swiftly. All transactions are 100% secured. You have absolutely nothing to worry about whan trading or carrying out a transaction with Cryptologi. you can start trading from the very first day.</p>
             <!-- <a class="open-2" href="#">Read More</a> -->
           </div>
           <div class="read__more">
             <b>LEARN HOW<br>TO TRADE</b>
-            <p>Trading with Cryptologi gives you full access to numerous professional Bitcoin traders you can learn from. We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.</p>
+            <p>Trading with Cryptologi gives you full access to numerous professional Bitcoin traders you can learn from. We have a live trading page where you can easily get access to market trends and updates, with very good documented and precise video tutorials on how to trade. Cryptologi also offers its clients a demo account to help them practice the act of trading and become good at it.  This demo accounts helps to prepare you for what to expect in the real market. The demo accounts offered my Cryptologi is what makes it one of the best.</p>
             <!-- <a class="open-3" href="#">Read More</a> -->
           </div>
         </div>
