--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -79,16 +79,16 @@
     <div class="container">
       <div class="news__flex">
         <div class="news__left-column">
-          <b>WHY CRYPTOLOGIC</b>
-          <p>Plus500Crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use...</p>
+          <b>WHY Plus500Crypto</b>
+          <p>Plus500Crypto offers traders a wide range of possibilities. We offer a better way to move money, as people all over the world now, make use of digital currencies to send money across the world irrespective of your geographical location. This way is faster, easier and cheaper to use than paper money. Investing in digital currencies also ensures financial freedom, as no single entity or government policy controls it. </p>
         </div>
         <div class="news__middle-column">
           <b>A NEW TYPE OF INVECTMENT</b>
-          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of Plus500Crypto. Plus500Crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots</p>
+          <p>The emergence of cryptocurrencies into the market is something every trader is excited about. This is because of the ease and transparency involved in the use of digital currencies. When you think of trading cryptocurrencies you should think of cryptologic. Plus500Crypto web socket feeds allows you to easily gain access to real-time market data and our trading API helps you develop safe programmatic trading bots.</p>
         </div>
         <div class="news__right-column">
           <b>FRIENDLY INTERFACE</b>
-          <p>Plus500Crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your...</p>
+          <p>Plus500Crypto offers a very friendly and unique interface to trade on. Our amazing platform simplifies trading and makes the experience a great one for every trader. You can easily customize your interface. Arrange and organize your workspace as it suits you from theme selection, compose layouts, notifications set up and lots more. With Plus500Crypto trading is on a whole new level entirely. Sign up today.</p>
         </div>
       </div>
     </div>
@@ -106,7 +106,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>MULTIPLATFORM TRADING</h2>
-        <p>When trading Cryptocurrencies with BDSwiss you are increase or decrease in value against another currencyCryptocurrencies with BDSwiss you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
+        <p>When trading Cryptocurrencies with Pluss500Crypto you are increase or decrease in value against another currencyCryptocurrencies with BDSwiss you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
       </div>
     </div>
     <div class="trading__coin">
