--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -21,63 +21,26 @@
             <li class="page-header__item"><a href="#">Contact Us</a></li>
           </ul>
           <div class="page-header__sub-menu">
-            <a href=""></a>
-            <a href=""></a>
+            <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
+            <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
         </div>
       </div>
     </nav>
   </header>
-  <section class="reviews">
-    <div class="reviews__wrapper  slider">
-      <h2 class="reviews__title">Отзывы о нас</h2>
-      <a class="reviews__write  btn" href="">Оставить свой</a>
-      <input class="slider__input" type="radio" name="reviews" id="reviews-input-1" checked>
-      <input class="slider__input" type="radio" name="reviews" id="reviews-input-2">
-      <input class="slider__input" type="radio" name="reviews" id="reviews-input-3">
-      <div class="reviews__items">
-        <blockquote class="reviews__item  reviews__item--1  slider__item">
-          <div class="reviews__author-foto">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/reviews-tra-d.jpg">
-              <source media="(min-width: 768px)" srcset="img/reviews-tra-t.jpg">
-              <img src="img/reviews-tra-m.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
-            </picture>
-          </div>
-          <cite class="reviews__author-name">Трэвис Баркер</cite>
-          <p>Спасибо за лысину! Был проездом в Москве, заскочил побриться, чтобы было видно новую татуировку!</p>
-        </blockquote>
-        <blockquote class="reviews__item  reviews__item--2  slider__item">
-          <div class="reviews__author-foto">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/reviews-tra-d.jpg">
-              <source media="(min-width: 768px)" srcset="img/reviews-tra-t.jpg">
-              <img src="img/reviews-tra-m.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
-            </picture>
-          </div>
-          <cite class="reviews__author-name">Саша Мальцев</cite>
-          <p>Попросил омолодить и омолодили! Кто теперь скажет, что мне 45?</p>
-        </blockquote>
-        <blockquote class="reviews__item  reviews__item--3  slider__item">
-          <div class="reviews__author-foto">
-            <picture>
-              <source media="(min-width: 1200px)" srcset="img/reviews-tra-d.jpg">
-              <source media="(min-width: 768px)" srcset="img/reviews-tra-t.jpg">
-              <img src="img/reviews-tra-m.jpg" alt="Фото Трэвиса Баркера" width="50" height="33">
-            </picture>
-          </div>
-          <cite class="reviews__author-name">Винстон Синий</cite>
-          <p>Как только заростаю и волосы начинают мешать видеть — бегом в Бородинский!</p>
-        </blockquote>
-        <button class="reviews__btn  reviews__prev" type="button">Предыдущий отзыв</button>
-        <button class="reviews__btn  reviews__next" type="button">Следующий отзыв</button>
+  <section class="slider">
+    <div class="slider__box">
+      <div class="slider__slide">
+        <b>s</b>
+        <img src="" alt="">
+        <p>s</p>
+        <a href="#">s</a>
       </div>
-      <div class="reviews__toggles  slider__toggles">
-        <label class="slider__toggle" for="reviews-input-1">1</label>
-        <label class="slider__toggle" for="reviews-input-2">2</label>
-        <label class="slider__toggle" for="reviews-input-3">3</label>
-      </div>
+      <div class="slider__slide">your content</div>
+      <div class="slider__slide">your content</div>
+      <div class="slider__slide">your content</div>
     </div>
   </section>
+  <script src="js/script.js"></script>
 </body>
 </html>
