--- a/assets/templates/forex/sass/variables.scss
+++ b/assets/templates/forex/sass/variables.scss
@@ -1,5 +1,3 @@
-$bg-darkgrey: #292929;
-$bg-lightgrey: #f8f5f2;
-$tablet-widths: "min-width: 768px";
-$desktop-widths: "min-width: 1200px";
-$mobile-widths-only: "max-width: 767px";
+// $mc: #2e2963;
+$mc: #464380;
+$sc: #efbc1c;
