--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Forex 24</title>
+  <link rel="stylesheet" href="js/slick/slick.css"/>
+  <link rel="stylesheet" href="js/slick/slick-theme.css"/>
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
@@ -30,17 +32,26 @@
   </header>
   <section class="slider">
     <div class="slider__box">
-      <div class="slider__slide">
-        <b>s</b>
-        <img src="" alt="">
-        <p>s</p>
-        <a href="#">s</a>
+      <div class="slider__slide  slider__slide--one">
+        <div class="container">
+          <p>TRADE THE WORLD WITH</p>
+          <img src="img/slider-logo.png" alt="">
+          <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
+          <a href="#">START TRADING NOW</a>
+        </div>
       </div>
-      <div class="slider__slide">your content</div>
-      <div class="slider__slide">your content</div>
-      <div class="slider__slide">your content</div>
+      <div class="slider__slide  slider__slide--two">
+        <div class="container">
+          <p>TRADE THE WORLD WITH</p>
+          <img src="img/slider-logo.png" alt="">
+          <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
+          <a href="#">START TRADING NOW</a>
+        </div>
+      </div>
     </div>
   </section>
+  <script src="js/jquery.min.js"></script>
+  <script src="js/slick/slick.min.js"></script>
   <script src="js/script.js"></script>
 </body>
 </html>
