--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -106,7 +106,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>MULTIPLATFORM TRADING</h2>
-        <p>When trading Cryptocurrencies with Pluss500Crypto you are increase or decrease in value against another currencyCryptocurrencies with BDSwiss you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
+        <p>When trading Cryptocurrencies with Pluss500Crypto you are increase or decrease in value against another currencyCryptocurrencies with Pluss500Crypto you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
       </div>
     </div>
     <div class="trading__coin">
