--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -48,6 +48,14 @@
           <a href="#">START TRADING NOW</a>
         </div>
       </div>
+      <div class="slider__slide  slider__slide--three">
+        <div class="container">
+          <p>TRADE THE WORLD WITH</p>
+          <img src="img/slider-logo.png" alt="">
+          <p>CFDs on FOREX, SHARES, INDICES,<br>SPOT METALS, FUTURES, BONDS, OPTIONS<br>AND ETFs</p>
+          <a href="#">START TRADING NOW</a>
+        </div>
+      </div>
     </div>
   </section>
   <script src="js/jquery.min.js"></script>
