--- a/assets/templates/forex/sass/blocks/slider.scss
+++ b/assets/templates/forex/sass/blocks/slider.scss
@@ -29,6 +29,11 @@
   background-size: cover;
 }
 
+.slider__slide--three {
+  background: url('../img/slider-3.png') no-repeat center;
+  background-size: cover;
+}
+
 .slick-dots {
   bottom: 20px;
 }
