--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -169,6 +169,10 @@ body {
   background: url("../img/slider-2.png") no-repeat center;
   background-size: cover; }
 
+.slider__slide--three {
+  background: url("../img/slider-3.png") no-repeat center;
+  background-size: cover; }
+
 .slick-dots {
   bottom: 20px; }
 
