--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -105,8 +105,11 @@
   <section class="trading">
     <div class="container container--trading">
       <div class="trading__flex">
-        <h2>MULTIPLATFORM TRADING</h2>
-        <p>When trading Cryptocurrencies with Pluss500Crypto you are increase or decrease in value against another currency. Cryptocurrencies with Pluss500Crypto you are essentially making a prediction on whether it will increase or decrease in value against another currency</p>
+        <h2>NO EXPERIENCE?</h2>
+        <p>You have no worries.
+Are you thinking of venturing into the world of cryptocurrency trading?
+Plus500Crypto has you covered, sign up today and get a demo account, a demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
+</p>
       </div>
     </div>
     <div class="trading__coin">
