--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -22,7 +22,7 @@
             <li class="page-header__item"><a href="#">Partners</a></li>
             <li class="page-header__item"><a href="#">Contact Us</a></li>
           </ul>
-          <div class="page-header__sub-menu">
+          <div class="page-header__user-menu">
             <a class="page-header__link  page-header__link--violet" href="#">Open live account</a>
             <a class="page-header__link  page-header__link--black" href="#">Login</a>
           </div>
