--- a/assets/templates/crypto-b/index.html
+++ b/assets/templates/crypto-b/index.html
@@ -106,9 +106,7 @@
     <div class="container container--trading">
       <div class="trading__flex">
         <h2>NO EXPERIENCE?</h2>
-        <p>You have no worries.
-Are you thinking of venturing into the world of cryptocurrency trading?
-Plus500Crypto has you covered, sign up today and get a demo account, a demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
+        <p>You have no worries. Are you thinking of venturing into the world of cryptocurrency trading? Plus500Crypto has you covered; Sign up today and get a demo account. A demo account will prepare and teach you what to expect in the real market. We also have already prepared educational tool from top professionals to enhance your knowledge about trading. 
 </p>
       </div>
     </div>
